--- a/src/plugin-macros.h.in
+++ b/src/plugin-macros.h.in
@@ -1,6 +1,6 @@
 /*
-Plugin Name
-Copyright (C) <Year> <Developer> <Email Address>
+yt-live-thumbnails
+Copyright (C) <0222> <Logan Lim> <loglim11@gmail.com>
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
